testdata/baselines/reference/submodule/conformance/jsDeclarationsExportAssignedClassExpressionAnonymousWithSub(target=es2015).errors.txt
index.js(1,1): error TS2741: Property 'Sub' is missing in type 'typeof exports' but required in type 'typeof (Anonymous class)'.
index.js(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
index.js(1,1): error TS4082: Default export of the module has or is using private name '(Anonymous class)'.


==== index.js (3 errors) ====
    module.exports = class {
    ~~~~~~~~~~~~~~
!!! error TS2741: Property 'Sub' is missing in type 'typeof exports' but required in type 'typeof (Anonymous class)'.
!!! related TS2728 index.js:9:1: 'Sub' is declared here.
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~
        /**
    ~~~~~~~
    ~~~~~~~
         * @param {number} p
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~
         */
    ~~~~~~~
    ~~~~~~~
        constructor(p) {
    ~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~
            this.t = 12 + p;
    ~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
    ~~~~~
    }
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    ~
!!! error TS4082: Default export of the module has or is using private name '(Anonymous class)'.
    module.exports.Sub = class {
        constructor() {
            this.instance = new module.exports(10);
        }
    }
    